--- a/index.html
+++ b/index.html
@@ -204,17 +204,7 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+           Bacon ipsum dolor sit amet eiusmod rump t-bone, sint aliqua excepteur short loin bresaola tongue. Shankle officia qui magna. Ham bacon adipisicing pig capicola, fatback prosciutto shoulder et venison voluptate frankfurter. Fugiat cow cillum, shank doner nulla magna turducken. Culpa exercitation pastrami excepteur. Minim boudin fugiat, laborum cow beef ribs labore reprehenderit veniam ea ullamco. Dolor chicken elit in pariatur ground round pancetta.
           </p>
         </div>
       </div>
@@ -222,17 +212,7 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+           Nisi sed enim drumstick filet mignon. Spare ribs ground round shank fugiat mollit duis chuck eu, salami ut veniam laborum tongue exercitation laboris. Chicken pancetta ex, kielbasa eiusmod aliqua enim ball tip tongue. Hamburger enim nisi quis et in proident. Reprehenderit dolore sed chuck proident pork loin laborum leberkas ribeye ham hock. Nulla incididunt drumstick, sed occaecat jerky veniam kielbasa ea ball tip. Corned beef et biltong veniam ullamco meatloaf pork loin pastrami swine chuck nisi cow salami pig.
           </p>
         </div>
         <div class="span5 asset">
