--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
         </div>
         <div class="span5 copy">
           <p>
-           Bacon ipsum dolor sit amet eiusmod rump t-bone, sint aliqua excepteur short loin bresaola tongue. Shankle officia qui magna. Ham bacon adipisicing pig capicola, fatback prosciutto shoulder et venison voluptate frankfurter. Fugiat cow cillum, shank doner nulla magna turducken. Culpa exercitation pastrami excepteur. Minim boudin fugiat, laborum cow beef ribs labore reprehenderit veniam ea ullamco. Dolor chicken elit in pariatur ground round pancetta.
+The ubiquitous payphone, once the sign of progress and modernity, offering even the most common man a tool to reach out and touch people in faraway places\
+.  Sadly, with the advent of mobile cellular technology, payphones have come to be anachronistic vestiges of a world that no longer exists for many.
+  
           </p>
         </div>
       </div>
@@ -212,7 +214,7 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-           Nisi sed enim drumstick filet mignon. Spare ribs ground round shank fugiat mollit duis chuck eu, salami ut veniam laborum tongue exercitation laboris. Chicken pancetta ex, kielbasa eiusmod aliqua enim ball tip tongue. Hamburger enim nisi quis et in proident. Reprehenderit dolore sed chuck proident pork loin laborum leberkas ribeye ham hock. Nulla incididunt drumstick, sed occaecat jerky veniam kielbasa ea ball tip. Corned beef et biltong veniam ullamco meatloaf pork loin pastrami swine chuck nisi cow salami pig.
+I believe that there is still a place for payphones in the modern world.  PayPhonePhinder is an app for both iOS and Android that allows users to find, use, log, and share the public phones around them.  The ultimate goal is to increase awareness and participation in this awesome public communications medium.
           </p>
         </div>
         <div class="span5 asset">
