--- a/index.html
+++ b/index.html
@@ -222,8 +222,15 @@
 	    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5207f188304d931f"></script>
 	    <!-- AddThis Button END -->
 
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+	    <a class="coinbase-button"
+data-button-style="custom_large"
+data-button-text="Preorder with Bitcoin"
+data-code="e853ae7e5a4d309e6df512e4dbb68700"
+href="https://coinbase.com/checkouts/e853ae7e5a4d309e6e5512e4dbb68700">
+	      Preorder with Bitcoin
+	    </a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
           </div>
         </div>
       </div>
