--- a/index.html
+++ b/index.html
@@ -221,15 +221,8 @@
 	    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 	    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5207f188304d931f"></script>
 	    <!-- AddThis Button END -->
-
-	    <a class="coinbase-button"
-data-button-style="custom_large"
-data-button-text="Preorder with Bitcoin"
-data-code="e853ae7e5a4d309e6df512e4dbb68700"
-href="https://coinbase.com/checkouts/e853ae7e5a4d309e6e5512e4dbb68700">
-	      Preorder with Bitcoin
-	    </a>
-	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+<-- BITCOIN CRAP-->
+<a class="coinbase-button" data-code="9765b6360122913954082e7afa0f9399" href="https://coinbase.com/checkouts/9765b6360122913954082e7afa0f9399">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 
           </div>
         </div>
